@@ -106,6 +106,8 @@ Enhancements:
     - Removed test_unicode.py, since it is kind of dumb. It used to be more
       useful, but now with py2.6, we are just testing that one line of code
       in it is actually there.
+* Fixed bug #1312328 WebDAV backend can't understand 200 OK response to DELETE
+  - Allow both 200 and 204 as valid response to delete
 
 New in v0.6.23 (2014/01/24)
 ---------------------------
